# aoc19-hs

./: README.md  aoc19.cabal  flake.nix  justfile
.github/workflows/: ci.yaml
nix/modules/flake-parts/: devshell.nix  haskell.nix  pre-commit.nix
src/Day02/: Main.hs
